# OOP_LABS_FILATOV

LR1FILATOV/: CmakeLists.txt  LR1FILATOV.txt  README.md  main.cpp
LR1FILATOV/include/: del_vowels.h
LR1FILATOV/src/: del_vowels.cpp
LR1FILATOV/test/: test001.cpp
LR2FILATOV/: CMakeLists.txt  README.md  main.cpp
LR2FILATOV/include/: Money.h
LR2FILATOV/src/: Money.cpp
LR2FILATOV/test/: test001.cpp
LR3FILATOV/: CMakeLists.txt  main.cpp
LR3FILATOV/include/: Figure.h  Figure_array.h  Point.h  Rectangle.h  Square.h  Trapezoid.h
LR3FILATOV/src/: Figure.cpp  Figure_array.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
LR3FILATOV/test/: test001.cpp
LR4FILATOV/: CMakeLists.txt  README.md  main.cpp
LR4FILATOV/src/: Figure.h  Figure_array.h  Point.h  Rectangle.h  Square.h  Trapezoid.h
LR4FILATOV/test/: test001.cpp
LR5FILATOV/: CMakeLists.txt  LR5FILATOV.txt  main.cpp
LR5FILATOV/include/: DequeAllocator.h  DynamicArray.h
LR5FILATOV/test/: test001.cpp
LR6FILATOV/: CMakeLists.txt  factory.h  main.cpp  npc.cpp  npc.h  observer.cpp  observer.h  orc.cpp  orc.h  outlaw.cpp  outlaw.h  tests.cpp  visitor.h  werewolf.cpp  werewolf.h
LR7FILATOV/: CMakeLists.txt  main.cpp  npc.cpp  npc.h  orc.cpp  orc.h  outlaw.cpp  outlaw.h  tests.cpp  werewolf.cpp  werewolf.h
